Text Data-Blocks get deleted on Recursive Purge #87489

Closed
opened 2021-04-14 12:42:28 +02:00 by Simon Thommes · 10 comments
Member

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-13 07:49, hash: 30ee57be60
Worked: (newest version of Blender that worked as expected)

Short description of error
Recursive purge deletes all text-datablocks that are not referenced in a custom property
text_deletion-2021-04-14_12.41.04.mp4

Exact steps for others to reproduce the error
Do normal purge and recursive purge on this file:
text_deletion.blend

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-13 07:49, hash: `30ee57be60` Worked: (newest version of Blender that worked as expected) **Short description of error** Recursive purge deletes all text-datablocks that are not referenced in a custom property [text_deletion-2021-04-14_12.41.04.mp4](https://archive.blender.org/developer/F9933264/text_deletion-2021-04-14_12.41.04.mp4) **Exact steps for others to reproduce the error** Do normal purge and recursive purge on this file: [text_deletion.blend](https://archive.blender.org/developer/F9933262/text_deletion.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

#86941 was marked as duplicate of this issue

#86941 was marked as duplicate of this issue
Zed was assigned by Simon Thommes 2021-04-14 12:43:08 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Zed was unassigned by Simon Thommes 2021-04-14 12:44:16 +02:00
Sebastian Parborg was assigned by Simon Thommes 2021-04-14 12:44:16 +02:00
Author
Member

Added subscriber: @ZedMaster

Added subscriber: @ZedMaster
Author
Member

Removed subscriber: @ZedMaster

Removed subscriber: @ZedMaster

Posted my proposed fix here: https://developer.blender.org/D10983

Posted my proposed fix here: https://developer.blender.org/D10983

This issue was referenced by 756c9b2219

This issue was referenced by 756c9b22193a70e1900b19d3ec7258eee97a48a4

This issue was referenced by d0b3f9c81b

This issue was referenced by d0b3f9c81b031f19e0ecfdacad359d76dcddaebb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscribers: @Vyach, @lichtwerk

Added subscribers: @Vyach, @lichtwerk
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87489
No description provided.